--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 body, html {
   margin: none;
   padding: none;
-  background-color: white;
+  background-color: #ffffff;
   font-family: 'Open Sans', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Rubik Mono One', sans-serif;
 }
 
 header {
-  background-image: url("img/stock_plumber.jpg");
-  background-size: cover;
   width: 100%;
   height: 600px;
+  background-image: url("img/stock_plumber.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 div.logo {
@@ -28,6 +30,9 @@ img.logo {
   width: 100%;
 }
 
+section {
+  background-color: #ffffff;
+}
 
 section, footer {
   width: 100%;
