--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6 {
 header {
   width: 100%;
   height: 600px;
-  background-image: url("img/stock_plumber2.jpg");
+  background-image: url("img/newmans_header_2.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
