--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
+@media only screen and (max-width: 900px) {
+  section, footer {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  #leverantorer {
+    display: none;
+  }
+
+  header {
+    height: 300px;
+    background-position: center -200px;
+  }
+}
+
+@media only screen and (min-width: 901px) {
+  section, footer {
+    padding-left: 20%;
+    padding-right: 20%;
+  }
+
+  header {
+    height: 600px;
+    background-position: center;
+  }
+}
+
+
 body, html {
   margin: none;
   padding: none;
@@ -11,11 +39,11 @@ h1, h2, h3, h4, h5, h6 {
 
 header {
   width: 100%;
-  height: 600px;
   background-image: url("img/newmans_header_2.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
+
 }
 
 div.logo {
@@ -23,7 +51,8 @@ div.logo {
   margin-left:auto;
   margin-right:auto;
   position: relative;
-  bottom:-400px;
+  top:-200px;
+  margin-bottom: -200px;
 }
 
 img.logo {
@@ -36,13 +65,11 @@ section {
 
 section, footer {
   width: 100%;
-  margin-top: 100px;;
-  padding-left: 20%;
-  padding-right: 20%;
   display: flex;
   justify-content: center;
   align-content: stretch;
   flex-wrap: wrap;
+  padding-top: 30px;
 }
 
 div.subsection {
@@ -51,7 +78,7 @@ div.subsection {
 }
 
 #presentation {
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 
 #comfort-logo {
@@ -60,6 +87,11 @@ div.subsection {
 
 #kontaktinfo {
   font-size: 1.2em;
+}
+
+p.significant {
+  font-size: 1,1;
+  font-weight: bold;
 }
 
 div.profile {
@@ -77,4 +109,9 @@ p.profile {
 footer {
   background-color: #222;
   color:#ffffff;
+}
+
+img.moraen {
+  width: 100%;
+  max-width: 300px;
 }
