--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 
 header {
   width: 100%;
-  background-image: url("img/newmans_header_2.jpg");
+  background-image: url("img/newmans_header_2_bw.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -107,6 +107,7 @@ p.profile {
 }
 
 footer {
+  margin-top: 50px;
   background-color: #222;
   color:#ffffff;
 }
