--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 900px) {
+@media all and (max-width: 900px) {
   section, footer {
     padding-left: 5%;
     padding-right: 5%;
@@ -13,7 +13,7 @@
   }
 }
 
-@media only screen and (min-width: 901px) {
+@media all and (min-width: 901px) {
   section, footer {
     padding-left: 20%;
     padding-right: 20%;
